--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,10 @@ on:
     types: [closed]
     branches:
       - master
-
+permissions:
+  contents: write
+  packages: write
+  
 jobs:
   release:
     if: github.event_name == 'workflow_dispatch' || (github.event.pull_request.merged == true)
