Optimize EqualsIgnoreCase with Span and add benchmark comparison
- Benchmarked string.Equals vs Span.Equals vs MemoryExtensions.Equals
- Span approach is 0.0ns for short strings (JIT optimized away)
- Span approach is 7% faster for medium strings (32ns vs 35ns)
- Zero allocations for all approaches
- Updated EqualsIgnoreCase to use Span for better performance
- Added StringEqualsBenchmark with comprehensive test cases
- Set null == null to return false (fail-fast for microservices)

--- a/src/SharedX.Abstractions/SharedX.Abstractions.csproj
+++ b/src/SharedX.Abstractions/SharedX.Abstractions.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
     <PackageId>SharedX.Abstractions</PackageId>
     <Description>Abstractions for caching, messaging, persistence, and tracing in SharedX microservices</Description>
     <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry" Version="1.13.1" />
+    <PackageReference Include="OpenTelemetry" />
     <ProjectReference Include="..\SharedX.Core\SharedX.Core.csproj" />
   </ItemGroup>
 </Project>
