--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,7 +5,6 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
     
     <!-- Package metadata -->
     <Authors>Selman Ekici</Authors>
@@ -16,7 +15,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>microservices;shared;utilities;dotnet;netstandard</PackageTags>
+    <PackageTags>microservices;shared;utilities;dotnet;netstandard;net8</PackageTags>
     
     <!-- Symbols -->
     <IncludeSymbols>true</IncludeSymbols>
