--- a/src/SharedX.Extensions/SharedX.Extensions.csproj
+++ b/src/SharedX.Extensions/SharedX.Extensions.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
-    <PackageId>SharedX.Extensions</PackageId>
-    <Description>Extension methods for common .NET types (String, DateTime, Collections, etc.)</Description>
-    <Version>1.0.0</Version>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <!-- ✅ Enable AOT compatibility -->
+        <IsAotCompatible>true</IsAotCompatible>
+        <PackageId>SharedX.Extensions</PackageId>
+        <Description>Extension methods for common .NET types (String, DateTime, Collections, etc.)</Description>
+        <Version>1.0.0</Version>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SharedX.Core\SharedX.Core.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\SharedX.Core\SharedX.Core.csproj"/>
+    </ItemGroup>
 </Project>
