Unit test removed

--- a/src/SharedX.Tests/SharedX.Tests.csproj
+++ b/src/SharedX.Tests/SharedX.Tests.csproj
@@ -27,4 +27,8 @@
         <ProjectReference Include="..\SharedX.Extensions\SharedX.Extensions.csproj"/>
         <ProjectReference Include="..\SharedX.Abstractions\SharedX.Abstractions.csproj"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ExtensionTests\" />
+    </ItemGroup>
 </Project>
