--- a/src/SharedX.Core/SharedX.Core.csproj
+++ b/src/SharedX.Core/SharedX.Core.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <!-- ✅ Enable AOT compatibility -->
-        <IsAotCompatible>true</IsAotCompatible>
+<!--        <IsAotCompatible>true</IsAotCompatible>-->
         <PackageId>SharedX.Core</PackageId>
         <Description>Core utilities, models, constants, and exceptions for SharedX microservices</Description>
         <Version>1.0.0</Version>
